--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "debug": "~0.7.0",
     "pathspec": "~0.9.1",
-    "mkdirp": "~0.3.2"
+    "mkdirp": "~0.3.2",
+    "dreamopt": "~0.7.0"
   },
   "devDependencies": {
     "mocha": "~1.0.3"
